--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
       <h1>Stock Data Viewer</h1>
     </header>
     <main>
-      <input type="file" id="fileInput" accept=".csv" />
-      <div class="controls">
-        <button id="expandAll">Expand All</button>
-        <button id="collapseAll">Collapse All</button>
+      <div class="file-controls">
+        <input type="file" id="fileInput" accept=".csv" />
+        <div class="controls">
+          <button id="expandAll">Expand All</button>
+          <button id="collapseAll">Collapse All</button>
+        </div>
       </div>
+      <div id="loading" class="loading">Processing...</div>
       <div id="treeView"></div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.12/jstree.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="app.js"></script>
-    <script src="csvWorker.js"></script>
   </body>
 </html>
