--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--Added this line on gitHub -->
+    <!-- Added this line in gitHub -->
+    <!-- Added this line in vsc -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stock Data Viewer</title>
